<resources>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="app_name">CGPSC 2023</string>
    <string name="title_activity_main">Chhattisgarh Public Service Commission</string>
    <string name="signin">SIGN IN</string>
    <string name="password">Password</string>
    <string name="title_i_am_aspiring">I am aspiring for</string>
    <string name="email">Email address/Username</string>
    <string name="googlegay">Pay with Google Pay</string>
    <string name="login_with_facebook">{fa-facebook 24dp}\u0020\u0020\u0020 Login with Facebook</string>
    <string name="login_with_google">{fa-google-plus 24dp}\u0020\u0020 Login with Google+</string>
    <string name="intercom_gcm_sender_id">375081567467</string>
    <string name="title_test_rules">Test rules</string>
    <string name="title_upgrade_plan">Upgrade plan</string>
    <string name="title_discussion">Discussion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="inviteafriend">Invite a friend</string>
    <string name="upgrade">Upgrade</string>
    <string name="forum">Forum</string>
    <string name="change_course">Change course</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_signup"> New user? Sign up </string>
    <string name="prepdialog">"Wait tomorrow for more 20 questions \nor Download <b> Prep Guru </b> to attempt 50 questions daily and for more features \nor <b>Upgrade</b> to have complete access."</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="send_reset_link">Recover Password</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="mobile">Mobile</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="instructions">1. The mock test has 20 questions daily from different sections of the selected exam. \n\n2. Each question has multiple options and one correct answer. A timer on top shows the time left to attempt the respective question. \n\n3. Tap on an option to make your selection, and confirm the answer before time runs out to know whether your answer is right or wrong. \n\n4. Tap Next to proceed to the next question. \n\n5. Review your score at the end of daily mock test, or once you quit the test by tapping the close button. You may now choose to improvise a subject of your choice. \n\nAt last but not the least, do remember, yes you can!</string>
    <string name="practice_instructions">1. The Practice Session has questions from the selected exam.\n\n2. Each question has multiple options and one correct answer. A timer on top shows the time left to attempt the respective question.\n\n3. Tap on an option to make your selection, and confirm the answer before time runs out to know whether your answer is right or wrong.\n\n4. Tap Next to proceed to the next question.\n\n5. Review your score at the end of practice session, or once you quit the test by tapping the close button.\n\nAt last but not the least, do remember, yes you can!</string>
    <string name="instructions_header">Please read the following instructions before proceeding further:</string>
    <string name="start_test">Start test</string>
    <string name="correct_icon">{fa-check-circle-o} </string>
    <string name="correct_message">{fa-check-circle-o 35dp} \u0020 Good going.</string>
    <string name="wrong_message"> \u0020 Better luck next time.</string>
    <string name="time_up_message"> \u0020 Time up.</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="choose">Choose a plan to prepare better</string>
    <string name="plan_description"><![CDATA[<ul><li>Access all the subjects.</li><li>Attempt unlimited questions.</li><li>Valid for 1 month.</li></ul>]]></string>
    <string name="plan_name">Starter Pack</string>
    <string name="price_only">199 only</string>
    <string name="report">REPORT</string>
    <string name="practise">PRACTICE</string>
    <string name="take_test">Take test</string>
    <string name="percentage">%</string>
    <string name="review_test">Review test</string>
    <string name="accuracy">Accuracy</string>
    <string name="speed">Speed</string>
    <string name="score_up">0 {fa-arrow-up #4CAF51}</string>
    <string name="day_label">Score</string>
    <string name="college">College name</string>
    <string name="degree">Degree</string>
    <string name="specialization">Specialization</string>
    <string name="batch_from">Batch from</string>
    <string name="batch_to">Batch to</string>
    <string name="location">Location</string>
    <string name="begin_test">Begin</string>
    <string name="begin_test_message">Hey there, Tap below to start your test.</string>
    <string name="resume_test_message">Welcome back!\nTap below to continue your daily prep!</string>
    <string name="resume_test">Resume Test</string>
    <string name="test_complete_and_review">Daily prep completed!\nTap below to see your Stats and Improvise.</string>
    <string name="maximum_limit_reached">You have reached maximum limit of questions in the free trial plan.\n</string>
    <string name="password_reset_link_has_been_emailed_to_you">We have sent your password to your email. Please check your inbox.</string>
    <string name="btn_continue">Continue</string>
    <string name="payment_successfull_n_your_pro_pack_is_now_active">Payment successful. \n Your plan is now active</string>
    <string name="payment_failure_message">Payment unsuccessful. \n Something went wrong</string>
    <string name="title_activity_plan_review">Review</string>
    <string name="personal_details">Personal Details</string>
    <string name="ravindra">Ravindra</string>
    <string name="ravidsrk_gmail_com">ravidsrk@gmail.com</string>
    <string name="_9945036812">9945036812</string>
    <string name="pay_now">Pay now</string>
    <string name="wrong_icon">{fa-times-circle-o}</string>
    <string name="attempt_tests_message">Attempt tests to see your ranking.</string>
    <string name="type_comment">Type your query/comment here</string>
    <string name="practise_test">Practice Test</string>
    <string name="day">Day</string>
    <string name="take_Sectest">Take test</string>
    <string name="coupontext"><b>GOT A COUPON?</b></string>
    <string name="banner_home_footer">ca-app-pub-0492739306320449/6117808774</string>
    <string name="interstitial_full_screen">ca-app-pub-0492739306320449/1548008375</string>
    <string name="facebook_app_id">184936908919641</string>
    <string name="fb_login_protocol_scheme">fb184936908919641</string>
    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail109</string>
    <string name="sample_industry_type_id_staging">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
    <string name="refer">Refer &amp; Unlock</string>
    <string name="refertext1">If you have invited 5 friends and have not received the free access then mail us at appsupport@youth4work.com</string>
    <string name="refertext">Refer 5 friends preparing for Competitive Exams to get unlimited access for 2 days.</string>
    <string name="credit_card_debit_card_net_banking_paytm">Credit Card/Debit Card/Net Banking/Paytm</string>
    <string name="todo">TODO</string>
    <string name="other_gateways">Other Gateways</string>
    <string name="total">Total</string>
    <string name="couponcodedescription">Have a promocode? / check offers</string>
    <string name="filleducation">(* Please update current education to see the result)</string>
    <string name="waitingtxt">You are being registered</string>
    <string name="mobilevarify"><b>mobileno</b>\n Is your phone number above correct?</string>
    <string name="changeemailid"><u>here</u></string>
    <string name="otptryagain">Don\'t get OTP? <b><u>Please Try Again</u></b></string>
    <string name="otppinmsg"><b>You would have received an SMS with Code,\n We try to read but could not. </b></string>
    <string name="otpwaitingmsg">If you have not received the SMS/Email tap on Re-send Code button below,It may take up to 5 minutes</string>
    <string name="pinmsg">Please enter Code below</string>
    <string name="txt_instruction"><b>INSTRUCTIONS</b>
    \u0009\u0009\n\n\u2022\u0009This is Mock test.
    \u0009\u0009\n\u2022\u0009This test has 100-200 questions.
    \u0009\u0009\n\u2022\u0009It will take approximately 1-3 hours to attempt all the questions
    \u0009\u0009\n\u2022\u0009If you have read and understood the instructions please click START TEST button
</string>
    <string name="tab">\u0009\u0009\u0009\u0009</string>
    <string name="sample">For loop is used when u know the condition till when u have to iterate , and while loop is used when u dont the condition thatmeans unlimited no of times u can iterate it,and  do-while is same as while loopexcept that it will print the statement atleast once irrespective of condition is tru or false</string>
    <string name="varifyMobileNo4Forums">Please verify your mobile number/Email-Id to submit your data!!</string>
    <string name="daily_limit_title">Daily free question limit has reached</string>
    <string name="daily_limit_message">Do you want to attempt more questions and prepare better?</string>
    <string name="quest_bank_over_title">Questions Bank Over</string>
    <string name="quest_bank_over_msg">No more questions left to attempt.Please wait for us to add new questions.</string>
    <string name="ok">OK</string>
    <string name="update_title">New Version Arrived</string>
    <string name="update_message">Please Update App</string>
    <string name="cancle">CANCEL</string>
    <string name="free_trail_expire_title">Free Trail Expired</string>
    <string name="free_trail_expire_msg">Free question limit has reached.</string>
<string name="verify_content1">


-<p>

<b>We will verifying the Phone number:</b>

</p>

</string>
<string name="verify_content2">

<b> Is this OK, or would you like to edit the number?</b>

</string>
    <string name="edit_verify">Edit/Verify</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="chat">Study Mates</string>
</resources>