<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.payment.PaymentStatusActivity"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/txt_payment_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="75dp"
            android:text="@string/correct_icon"
            android:textColor="@color/fruit_salad"
            android:textSize="65dp" />

        <ImageView
            android:id="@+id/txt_payment_icon1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_wrong_24dp"
            android:visibility="gone" />
    </LinearLayout>

    <com.youth4work.CGPSC_2023.ui.views.CustomTextViewFontRegular
        android:id="@+id/txt_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:gravity="center"
        android:text="@string/payment_successfull_n_your_pro_pack_is_now_active"
        android:textAlignment="center"
        android:textColor="@color/big_stone"
        android:textSize="20sp" />


    <com.youth4work.CGPSC_2023.ui.views.PrepButton
        android:id="@+id/btn_after_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:text="@string/btn_continue"
        android:textColor="@android:color/white"
        app:buttonColor="@color/curiousBlue"
        app:cornerRadius="3dp"
        app:shadowEnabled="false"
        app:shadowHeight="1dp" />

</RelativeLayout>
