<?xml version="1.0" encoding="utf-8"?>
<com.vlonjatg.progressactivity.ProgressRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:progressActivity="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progressActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    progressActivity:emptyBackgroundColor="#fbc02d"
    progressActivity:errorBackgroundColor="#42a5f5"
    progressActivity:loadingBackgroundColor="#FFFFFF"
    tools:ignore="MissingPrefix">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <com.youth4work.CGPSC_2023.ui.views.CustomTextViewFontRegular
                android:id="@+id/txt_plan_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/choose"
                android:textAlignment="center"
                android:textColor="@color/madison"
                android:textSize="@dimen/eighteen_sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.youth4work.CGPSC_2023.ui.views.CustomTextViewFontRegular
                android:id="@+id/txt_plan_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/twenty_two_dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/choose"
                android:textAlignment="center"
                android:textColor="@color/madison"
                android:textSize="@dimen/eighteen_sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_plans"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_plan" />

            <LinearLayout
                android:id="@+id/automaticcoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="8dp">


                <com.youth4work.CGPSC_2023.ui.views.CustomTextViewFontRegular
                    android:id="@+id/coupon_applied_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/coupon_apply_button"
                    android:layout_below="@+id/list_plans"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.21"
                    android:gravity="start"
                    android:text="@string/couponcodedescription"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold" />

                <!-- <Button
                     android:id="@+id/coupon_applied_button"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:layout_gravity="center"
                     android:layout_margin="4dp"
                     android:background="@color/bleu_de_france"
                     android:text="Apply now"
                     android:textColor="@color/white"/>-->
            </LinearLayout>

            <com.youth4work.CGPSC_2023.ui.views.CustomTextViewFontRegular
                android:id="@+id/gotcoupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/coupon_apply_button"
                android:layout_below="@+id/list_plans"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:text="@string/coupontext"
                android:textAlignment="center"
                android:textColor="@color/madison"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/usercoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:visibility="gone">

                <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                    android:id="@+id/coupon_text_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:hint="Have a Coupon Code"
                    android:imeOptions="actionNext"
                    android:padding="4dp"
                    android:textSize="@dimen/sixteen_sp"
                    app:met_clearButton="true"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="Coupon Code"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <Button
                    android:id="@+id/coupon_apply_button"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_margin="4dp"
                    android:background="@color/bleu_de_france"
                    android:text="Apply now"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</com.vlonjatg.progressactivity.ProgressRelativeLayout>
